Adds a real implementation of a dynamically-loaded filter
A DeployedFilter can be sent to the HBase region servers via HDFS and
loaded dynamically via a class loader that the DeployedFilterManager
manages.  Client code dictates which jar a filter lives in, and thus
which version of the filter gets deployed to the cluster.

When `mvn package` is run, an additional jar will be created that
contains the DeployedFilter and necessary classes.  This jar (named
deployed-filter-${project.version}-bin.jar) can be deployed to the HBase
region servers and used to dynamically load other filters.

--- a/hbase-filters/pom.xml
+++ b/hbase-filters/pom.xml
@@ -15,6 +15,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>hdfs-utils</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.hbase</groupId>
             <artifactId>hbase</artifactId>
             <scope>provided</scope>
@@ -26,4 +31,45 @@
         </dependency>
     </dependencies>
 
+    <profiles>
+        <!-- Use the 'deployed-filter' profile to create a deployable jar -->
+        <profile>
+            <id>deployed-filter</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-assembly-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-assembly-plugin</artifactId>
+                    <version>2.3</version>
+                    <executions>
+                        <execution>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>single</goal>
+                            </goals>
+                            <configuration>
+                                <finalName>deployed-filter-${project.version}</finalName>
+                                <descriptors>
+                                    <descriptor>src/main/assembly/deployed-filter.xml</descriptor>
+                                </descriptors>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 </project>
