--- a/odoop-parent/pom.xml
+++ b/odoop-parent/pom.xml
@@ -4,6 +4,7 @@
 
     <properties>
         <hbase.version>0.90.6-cdh3u4</hbase.version>
+        <hadoop.version>0.20.2-cdh3u4</hadoop.version>
     </properties>
 
     <parent>
@@ -25,6 +26,11 @@
                 <groupId>org.apache.hbase</groupId>
                 <artifactId>hbase</artifactId>
                 <version>${hbase.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.hadoop</groupId>
+                <artifactId>hadoop-core</artifactId>
+                <version>${hadoop.version}</version>
             </dependency>
             <dependency>
                 <groupId>junit</groupId>
