Adds integration testing for RowKeyInSetFilter
The integration test starts a mini cluster and then runs some test
methods to validate that the row key filtering works correctly.  At the
end of all tests in this test case, the mini cluster is torn down.

--- a/hbase-filters/pom.xml
+++ b/hbase-filters/pom.xml
@@ -24,9 +24,22 @@
             <artifactId>hbase</artifactId>
             <scope>provided</scope>
         </dependency>
+
+        <!-- Testing -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase</artifactId>
+            <classifier>tests</classifier>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-test</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
