--- a/hbase-filters/pom.xml
+++ b/hbase-filters/pom.xml
@@ -16,6 +16,11 @@
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>hdfs-utils</artifactId>
             <version>${project.version}</version>
         </dependency>
