Adds odoop-test project with HBaseTestRunner
The HBaseTestRunner is a JUnit 4 runner that manages an
HBaseTestingUtility and a MiniHBaseCluster for the full lifecycle of a
test suite.

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 
     <modules>
         <module>odoop-parent</module>
+        <module>odoop-test</module>
         <module>common</module>
         <module>hdfs-utils</module>
         <module>hbase-filters</module>
