Uses HBaseTestRunner from odoop-test

--- a/hbase-filters/pom.xml
+++ b/hbase-filters/pom.xml
@@ -32,6 +32,12 @@
 
         <!-- Testing -->
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>odoop-test</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
