--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <modules>
         <module>odoop-parent</module>
         <module>odoop-test</module>
-        <module>common</module>
+        <module>odoop-common</module>
         <module>hdfs-utils</module>
         <module>hbase-filters</module>
     </modules>
