--- a/odoop-parent/pom.xml
+++ b/odoop-parent/pom.xml
@@ -50,6 +50,12 @@
                 <version>4.10</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>org.scalatest</groupId>
+                <artifactId>scalatest_2.9.1</artifactId>
+                <version>1.8</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
