Begins the QueryPlanner with a Java implementation

--- a/hbase-filters/pom.xml
+++ b/hbase-filters/pom.xml
@@ -100,5 +100,31 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.scala-tools</groupId>
+                <artifactId>maven-scala-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>compile-scala-first</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <args>
+                        <arg>-deprecation</arg>
+                    </args>
+                    <jvmArgs>
+                        <jvmArg>-Xms64m</jvmArg>
+                        <jvmArg>-Xmx1024m</jvmArg>
+                    </jvmArgs>
+                    <sendJavaToScalac>false</sendJavaToScalac>
+                    <recompileMode>modified-only</recompileMode>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 </project>
