--- a/hbase-filters/pom.xml
+++ b/hbase-filters/pom.xml
@@ -29,6 +29,10 @@
             <artifactId>hbase</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+        </dependency>
 
         <!-- Testing -->
         <dependency>
@@ -98,52 +102,9 @@
                         </execution>
                     </executions>
                 </plugin>
-                <plugin>
-                    <groupId>org.scala-tools</groupId>
-                    <artifactId>maven-scala-plugin</artifactId>
-                    <version>2.15.2</version>
-                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>default-test</id>
-                        <phase>test</phase>
-                        <goals>
-                            <goal>test</goal>
-                        </goals>
-                        <configuration>
-                            <includes>
-                                <include>**/Test*.java</include>
-                                <include>**/*Spec.java</include>
-                            </includes>
-                            <excludes>
-                                <exclude>**/IntTest*.java</exclude>
-                            </excludes>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>integration-test</id>
-                        <phase>integration-test</phase>
-                        <goals>
-                            <goal>test</goal>
-                        </goals>
-                        <configuration>
-                            <includes>
-                                <include>**/IntTest*.java</include>
-                            </includes>
-                        </configuration>
-                    </execution>
-                </executions>
-                <configuration>
-                    <argLine>-XX:+HeapDumpOnOutOfMemoryError -Xmx512M -XX:MaxPermSize=128M</argLine>
-                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                    <runOrder>hourly</runOrder>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>org.scala-tools</groupId>
                 <artifactId>maven-scala-plugin</artifactId>
