--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <!-- TODO: Change this before really open-sourcing -->
-    <parent>
-        <groupId>com.positiveenergyusa</groupId>
-        <artifactId>pose-parent</artifactId>
-        <version>2.0.14</version>
-    </parent>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
     <groupId>com.opower</groupId>
     <artifactId>odoop</artifactId>
@@ -32,5 +29,4 @@
         <developerConnection>scm:git:</developerConnection>
     </scm>
     -->
-
 </project>
