--- a/hbase-filters/pom.xml
+++ b/hbase-filters/pom.xml
@@ -116,6 +116,13 @@
                             <goal>compile</goal>
                         </goals>
                     </execution>
+                    <execution>
+                        <id>testCompile-scala-first</id>
+                        <phase>process-test-resources</phase>
+                        <goals>
+                            <goal>testCompile</goal>
+                        </goals>
+                    </execution>
                 </executions>
                 <configuration>
                     <args>
