--- a/odoop-test/pom.xml
+++ b/odoop-test/pom.xml
@@ -3,9 +3,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.opower</groupId>
+        <groupId>com.opower.odoop</groupId>
         <artifactId>odoop-parent</artifactId>
-        <version>0.0.2-SNAPSHOT</version>
+        <version>0.0.3-SNAPSHOT</version>
         <relativePath>../odoop-parent</relativePath>
     </parent>
 
