--- a/hdfs-utils/pom.xml
+++ b/hdfs-utils/pom.xml
@@ -17,7 +17,7 @@
     <dependencies>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-core</artifactId>
+            <artifactId>hadoop-common</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
